syntax = "proto3";

package pb;

option go_package = "github.com/acd19ml/EventCOM/pb";
import "google/protobuf/timestamp.proto";

message Post {
  string Id = 1;
  string Email = 2;
  string Name = 3;
  string Role = 4;
  string Organisation = 5;
  string Contact = 6;
  repeated string KindofTalk = 7;
  string Title = 8;
  string Description = 9;
  repeated string Dates = 10;
  string ExtraDetails = 11;
  string Location = 12;
  string Status = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp updated_at = 15;

}

message PostResponse { Post post = 1; }
