syntax = "proto3";

package pb;

option go_package = "github.com/acd19ml/EventCOM/pb";

message CreatePostRequest {
  string Email = 1;
  string Name = 2;
  string Role = 3;
  string Organisation = 4;
  string Contact = 5;
  repeated string KindofTalk = 6;
  string Title = 7;
  string Description = 8;
  repeated string Dates = 9;
  string ExtraDetails = 10;
  string Location = 11;
  string Status = 12;
}
